--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ UA-77857843-1
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
-                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="works.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="works.html">ABOUT</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="works.html">WORKS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="about.html">CONTACT</a></li></ul></div>
+                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="about.html">ABOUT</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="works.html">WORKS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="contact.html">CONTACT</a></li></ul></div>
                         
                     </nav>
                 </div>
@@ -42,7 +42,7 @@ UA-77857843-1
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free mobile website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/dsc-0071-3872x2592-4.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">one page website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/dsc-0071-3872x2592-4.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
