--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ UA-77857843-1
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html website creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/dsc-0071-3872x2592-4.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a rel="external" href="https://mobirise.com">one page website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/dsc-0071-3872x2592-4.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
