--- a/glass.html
+++ b/glass.html
@@ -43,7 +43,7 @@ UA-77857843-1
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free website maker</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-20" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free website design software</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-20" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
