--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ UA-77857843-1
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">windows website builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="content5-19" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free website builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="content5-19" style="background-color: rgb(239, 239, 239);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -53,7 +53,7 @@ UA-77857843-1
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><br></p><p>My name is Paulien Wellens and I'm a student at LUCA School of Arts, in Ghent, in Belgiam. I study Product Design, specifically 'Glass and Ceramics'. I'm currently finishing my second year. &nbsp;<br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><br></p><p>My name is Paulien Wellens and I'm a student at LUCA School of Arts, in Ghent, in Belgium. I study Product Design, specifically 'Glass and Ceramics'. I'm currently finishing my second year. &nbsp;<br></p></div>
         </div>
     </div>
     
