--- a/glass.html
+++ b/glass.html
@@ -43,7 +43,7 @@ UA-77857843-1
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free website design software</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-20" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline website builder</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-20" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
@@ -149,7 +149,7 @@ UA-77857843-1
             <div class="modal-content">
                 <div class="modal-body">
                     <ol class="carousel-indicators">
-                        <li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="8"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" class=" active" data-slide-to="9"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="10"></li>
+                        <li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" class=" active" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="8"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="9"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-20" data-slide-to="10"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="item">
@@ -166,11 +166,11 @@ UA-77857843-1
                             <img alt="" src="assets/images/dsc-0083-3228x2547-97.jpg">
                         </div><div class="item">
                             <img alt="" src="assets/images/dsc-0073-2592x3872-68.jpg">
-                        </div><div class="item">
+                        </div><div class="item active">
                             <img alt="" src="assets/images/dsc-0087-3623x2425-17.jpg">
                         </div><div class="item">
                             <img alt="" src="assets/images/dsc-0109-3723x2592-49.jpg">
-                        </div><div class="item active">
+                        </div><div class="item">
                             <img alt="" src="assets/images/dsc-0081-3872x2592-36.jpg">
                         </div><div class="item">
                             <img alt="" src="assets/images/dsc-0114-3872x2592-82.jpg">
