changes to set up.

--- a/works.html
+++ b/works.html
@@ -42,7 +42,7 @@ UA-77857843-1
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobile website maker</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-28" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop website builder</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-28" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             
